--- a/CSS/3 - Selectors/index.html
+++ b/CSS/3 - Selectors/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h1>Hello World</h1>
-    <h1>Hello People</h1>
+    <h2>Hello People</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos,
       quasi delectus ratione voluptas atque, ut debitis consequatur at earum
