id and class selectors

--- a/CSS/3 - Selectors/index.html
+++ b/CSS/3 - Selectors/index.html
@@ -7,13 +7,31 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <!-- 1-2 -->
+    <!-- <h1>Hello World</h1>
     <h2>Hello People</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos,
       quasi delectus ratione voluptas atque, ut debitis consequatur at earum
       repellat accusamus tempora voluptatum porro libero cumque! Sed autem
       quidem a?
+    </p> -->
+
+    <!-- 3 -->
+
+    <!-- <h1 id="title">titlte heading</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab inventore
+      nulla minus! Mollitia at, labore corporis blanditiis quae magni iste.
     </p>
+    <h1 id="subheading">footer</h1> -->
+
+    <!-- 4 -->
+    <h3 class="blue">i am blue</h3>
+    <h3 class="yellow">i am yellow</h3>
+    <h3 class="blue">i am blue</h3>
+    <h3 class="yellow">i am yellow</h3>
+    <h3 class="blue">i am blue</h3>
+    <h3 class="yellow">i am yellow</h3>
   </body>
 </html>
