combination of id and class selectors

--- a/CSS/3 - Selectors/index.html
+++ b/CSS/3 - Selectors/index.html
@@ -27,7 +27,7 @@
     <h1 id="subheading">footer</h1> -->
 
     <!-- 4 -->
-    <h3 class="blue">i am blue</h3>
+    <h3 id="title" class="blue title-text">i am blue</h3>
     <h3 class="yellow">i am yellow</h3>
     <h3 class="blue">i am blue</h3>
     <h3 class="yellow">i am yellow</h3>
