combination of id and class selectors multiple time

--- a/CSS/3 - Selectors/index.html
+++ b/CSS/3 - Selectors/index.html
@@ -31,7 +31,7 @@
     <h3 class="yellow">i am yellow</h3>
     <h3 class="blue">i am blue</h3>
     <h3 class="yellow">i am yellow</h3>
-    <h3 class="blue">i am blue</h3>
+    <h3 class="blue title-text">i am blue</h3>
     <h3 class="yellow">i am yellow</h3>
   </body>
 </html>
