span styling using element name or its class

--- a/CSS/4 - Divs and spans/index.html
+++ b/CSS/4 - Divs and spans/index.html
@@ -19,7 +19,9 @@
       <h3>heading number two</h3>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate
-        sequi quo placeat, cumque corporis voluptatem fuga labore explicabo
+        <span class="upper-case">ey i am uppercase</span> sequi quo placeat,
+        cumque corporis voluptatem fuga labore explicabo
+        <span class="font-size">hey im bigger font size</span>
         excepturi. Soluta obcaecati cupiditate quas quae omnis at veniam,
         similique perferendis inventore?
       </p>
