colors and background props, color names, rgb & rgba, hex and hsl

--- a/CSS/7 - Colors/7-3 RGB & RGBA/index.html
+++ b/CSS/7 - Colors/7-3 RGB & RGBA/index.html
@@ -9,5 +9,6 @@
   <body>
     <h3 id="first">i am number one</h3>
     <h3 id="second">i am number second</h3>
+    <h3 id="third">i am number second</h3>
   </body>
 </html>
