--- a/CSS/7 - Colors/7-2 color names/index.html
+++ b/CSS/7 - Colors/7-2 color names/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h3 id="first">i am number one</h3>
+    <h3 id="second">i am number second</h3>
+  </body>
 </html>
