height:auto; min-height;max-height;overflow

--- a/CSS/11 - min Height - max Height/index.html
+++ b/CSS/11 - min Height - max Height/index.html
@@ -10,7 +10,45 @@
     <ul class="navbar">
       <li>simple link</li>
     </ul>
-    <div class="banner"></div>
-    <div class="example"></div>
+    <div class="banner">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi voluptatum,
+      doloribus illo voluptate quisquam, sint itaque quo voluptatem molestias
+      inventore enim eveniet tenetur. Cum fugiat nobis vero quasi facilis
+      similique aperiam dolore ipsum, dicta ipsa error, nemo iure nam vitae qui
+      delectus soluta explicabo ab? Incidunt odio eius quasi repudiandae iste.
+      Illo error quas modi earum cum consectetur natus inventore blanditiis,
+      fugit, magnam asperiores nostrum aliquid totam sed atque. Nam repellendus
+      eaque eum magnam, enim amet doloremque! Doloribus deserunt asperiores
+      ipsam minus animi sit fuga alias. Ipsa expedita numquam culpa alias.
+      Corrupti vel fugiat alias, distinctio eveniet exercitationem ullam autem
+      temporibus? Quod et, ratione molestiae eligendi iste deserunt? Quae vel
+      nam et provident quam ab fugiat quisquam atque, iusto, unde possimus
+      distinctio corporis ipsa velit labore. Magni magnam deleniti repellat
+      praesentium voluptatibus? Excepturi non aspernatur, recusandae dolore aut
+      culpa sequi quidem accusantium impedit autem cumque ad asperiores, nisi
+      placeat magnam? Ipsam natus autem labore iure distinctio. Maxime
+      laudantium quaerat eaque dicta atque, hic aut, natus nobis autem similique
+      maiores ullam sint labore dolor dolores eum veritatis! Facere, non eveniet
+      dolores sunt consequuntur dolorem veniam rerum sequi. Corrupti cumque,
+      excepturi aperiam sint harum quas vitae consequuntur voluptates vel, quasi
+      reiciendis optio?
+    </div>
+    <div class="example">
+      <p>hello world</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, velit
+        sequi ad, nesciunt laudantium repellat, quo non accusantium
+        exercitationem voluptatem optio eius vero at dolores sed ipsum minus
+        commodi aspernatur. Inventore nulla vel nemo error quam suscipit
+        consectetur corrupti distinctio ipsa, asperiores perspiciatis omnis hic
+        dolorem sunt fuga nisi nostrum voluptas officiis. Laboriosam alias illum
+        commodi laudantium quasi, consequatur doloribus velit, nesciunt
+        accusamus nihil quibusdam quis veniam libero suscipit ipsum. Dicta,
+        consectetur. Atque quis repellendus nam, minima nostrum accusantium
+        animi optio vitae vero quod fugit molestias tenetur incidunt iure,
+        tempora quidem. Culpa itaque quidem sequi asperiores minima unde
+        officiis iste?
+      </p>
+    </div>
   </body>
 </html>
