font-weight and font-style

--- a/CSS/12 - Typography/12-4 Font-weight & Font-style/index.html
+++ b/CSS/12 - Typography/12-4 Font-weight & Font-style/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Trade+Winds&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>hey dude i'm main heading</h1>
-    <p>
+    <h3 class="main-heading">hey dude i'm main heading</h3>
+    <p class="one">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
+      excepturi amet nostrum, quam iusto? Labore repudiandae libero quam dolore,
+      molestias est corporis laborum dignissimos eligendi? Nesciunt molestias ea
+      eligendi.
+    </p>
+    <h3 class="second-heading">hey dude i'm main heading</h3>
+    <p class="two">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
       excepturi amet nostrum, quam iusto? Labore repudiandae libero quam dolore,
       molestias est corporis laborum dignissimos eligendi? Nesciunt molestias ea
