--- a/CSS/12 - Typography/12-5 Text-Align & Text-Indent/index.html
+++ b/CSS/12 - Typography/12-5 Text-Align & Text-Indent/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Trade+Winds&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
