text-align and text-indent

--- a/CSS/12 - Typography/12-5 Text-Align & Text-Indent/index.html
+++ b/CSS/12 - Typography/12-5 Text-Align & Text-Indent/index.html
@@ -11,8 +11,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hey dude i'm main heading</h1>
-    <p>
+    <h3 class="main-heading">hey dude i'm main heading</h3>
+    <p class="one">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
+      excepturi amet nostrum, quam iusto? Labore repudiandae libero quam dolore,
+      molestias est corporis laborum dignissimos eligendi? Nesciunt molestias ea
+      eligendi.
+    </p>
+    <h3 class="second-heading">hey dude i'm main heading</h3>
+    <p class="two">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
       excepturi amet nostrum, quam iusto? Labore repudiandae libero quam dolore,
       molestias est corporis laborum dignissimos eligendi? Nesciunt molestias ea
