text-decoration, text-transform,letter-spacing,word-spacing and line-hight

--- a/CSS/12 - Typography/12-6 More text properties/index.html
+++ b/CSS/12 - Typography/12-6 More text properties/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Trade+Winds&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>hey dude i'm main heading</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
-      excepturi amet nostrum, quam iusto? Labore repudiandae libero quam dolore,
-      molestias est corporis laborum dignissimos eligendi? Nesciunt molestias ea
-      eligendi.
+    <a href="#">google</a>
+    <h1>hello world</h1>
+    <p class="one">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nemo
+      ipsam nobis laboriosam autem in corrupti. Veritatis voluptate ut iste.
+    </p>
+    <p class="two">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi ipsam
+      mollitia eligendi recusandae doloremque minima sapiente perferendis
+      facilis odio impedit?
+    </p>
+    <p class="three">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, facere
+      similique. Fugit quaerat omnis inventore accusantium possimus tempore
+      animi repellat!
     </p>
   </body>
 </html>
