--- a/CSS/13 - Box-Model/13-3 Margin/index.html
+++ b/CSS/13 - Box-Model/13-3 Margin/index.html
@@ -7,5 +7,12 @@
 
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>I would like to learn about CSS Boy Model</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus
+      laudantium quidem? Voluptatem nihil accusantium odio debitis fugiat magni
+      odit?
+    </p>
+  </body>
 </html>
