--- a/CSS/13 - Box-Model/13-4 Border/index.html
+++ b/CSS/13 - Box-Model/13-4 Border/index.html
@@ -8,21 +8,21 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="#">google</a>
-    <h1>hello world</h1>
-    <p class="one">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nemo
-      ipsam nobis laboriosam autem in corrupti. Veritatis voluptate ut iste.
+    <h1>I would like to learn about CSS Boy Model</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus
+      laudantium quidem? Voluptatem nihil accusantium odio debitis fugiat magni
+      odit?
     </p>
-    <p class="two">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi ipsam
-      mollitia eligendi recusandae doloremque minima sapiente perferendis
-      facilis odio impedit?
+    <p class="second">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus
+      laudantium quidem? Voluptatem nihil accusantium odio debitis fugiat magni
+      odit?
     </p>
-    <p class="three">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, facere
-      similique. Fugit quaerat omnis inventore accusantium possimus tempore
-      animi repellat!
+    <p class="third">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus
+      laudantium quidem? Voluptatem nihil accusantium odio debitis fugiat magni
+      odit?
     </p>
   </body>
 </html>
