box-sizing:content-box vsborder-box

--- a/CSS/14 - Display/14-5 box-sizing/index.html
+++ b/CSS/14 - Display/14-5 box-sizing/index.html
@@ -7,19 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="#">Home</a>
-      </li>
-      <li>
-        <a href="#">about us</a>
-      </li>
-      <li>
-        <a href="#">products</a>
-      </li>
-      <li>
-        <a href="#">contact</a>
-      </li>
-    </ul>
+    <div class="box-one">i am with border box</div>
+    <div class="box-two">i am normal</div>
+    <div class="box-three">i am without border-box</div>
   </body>
 </html>
