display inline-block

--- a/CSS/14 - Display/14-3 Display Inline/index.html
+++ b/CSS/14 - Display/14-3 Display Inline/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <span class="inline">i am inline element</span>
-    <a class="inline" href="#">i am inline element</a>
-    <img class="inline" width="200" src="./beach.jpg" alt="beach" />
+    <h1>hello world</h1>
+
+    <a href="#">link</a>
+    <a href="#">link</a>
+    <a href="#">link</a>
   </body>
 </html>
