--- a/CSS/17 - Position/17-5 Sticky/index.html
+++ b/CSS/17 - Position/17-5 Sticky/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="nav">navbar</div>
     <div>
       <p class="one">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum corrupti
@@ -20,5 +21,6 @@
         <span class="special">loremhey i'm absolute</span>
       </p>
     </div>
+    <div class="test"></div>
   </body>
 </html>
