Basic Selectors Recap

--- a/CSS/21 - Selectors III/21-1 intro/index.html
+++ b/CSS/21 - Selectors III/21-1 intro/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="heading">i'm heading 1</h1>
+    <h1 class="heading">i'm heading 2</h1>
+    <p>A simple paragrapgh</p>
+  </body>
 </html>
