--- a/CSS/21 - Selectors III/21-2 decendant & child /index.html
+++ b/CSS/21 - Selectors III/21-2 decendant & child /index.html
@@ -6,5 +6,17 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1>i am a child and decendant</h1>
+    </div>
+    <div class="header">
+      <h1>i am a child and decendant</h1>
+      <ul>
+        <li>
+          <h1>i am a decendant</h1>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
