pseudo elemet selectors ::first-line & ::first-letter

--- a/CSS/21 - Selectors III/21-4 first line - first letter/index.html
+++ b/CSS/21 - Selectors III/21-4 first line - first letter/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus aliquam
+      iure perspiciatis quae magnam nam rerum voluptas incidunt vitae iusto
+      quibusdam itaque, enim expedita hic minus nostrum molestiae natus! Saepe.
+    </p>
+  </body>
 </html>
