pseudo class selectors :hover & one more example of :active

--- a/CSS/21 - Selectors III/21-3 - Pseudo Classes - :hover/index.html
+++ b/CSS/21 - Selectors III/21-3 - Pseudo Classes - :hover/index.html
@@ -6,5 +6,20 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+      obcaecati magnam vero? Atque, saepe? Nihil eos ipsa aut non dolores?
+    </div>
+    <div class="header">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eius
+      perspiciatis nam libero earum quas, voluptate rem eum accusantium
+      voluptatem porro accusamus repellendus, dolores fugit iste distinctio
+      eaque, autem incidunt? Voluptas alias suscipit, ad necessitatibus
+      assumenda eveniet facilis eos voluptatem veritatis maiores expedita aut
+      corrupti temporibus eligendi. Totam, error blanditiis!
+    </div>
+
+    <a href="#">i am simple link</a>
+  </body>
 </html>
