pseudo class :root, what is it and its use

--- a/CSS/21 - Selectors III/21-6 pseudo class :root/index.html
+++ b/CSS/21 - Selectors III/21-6 pseudo class :root/index.html
@@ -7,10 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="#">general link</a>
-    <a href="https://google.com">visited link</a>
-    <a href="#">hovered link</a>
-    <a href="#">active link</a>
-    <a>simple link</a>
+    <h1 class="absolute">I'm absolute</h1>
+    <h1 class="relative">I'm relative</h1>
+    <p class="absolute">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa corrupti ab
+      ipsum. Suscipit cupiditate laborum voluptates ipsa architecto similique
+      reprehenderit fugiat, adipisci, dolorem eligendi sit fugit tempore ad hic
+      placeat.
+    </p>
+    <p class="relative">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa corrupti ab
+      ipsum. Suscipit cupiditate laborum voluptates ipsa architecto similique
+      reprehenderit fugiat, adipisci, dolorem eligendi sit fugit tempore ad hic
+      placeat.
+    </p>
   </body>
 </html>
