--- a/CSS/22 - transform/22-3 skew()/index.html
+++ b/CSS/22 - transform/22-3 skew()/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+  </body>
 </html>
